--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="John Doe" />
     <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula turpis sit amet elit pretium." />
-    <link rel="stylesheet" href="https://example.com/css/main.min.61bb32028587f24ca28522d8d197970c7ef33284e5fffb45a75fcbbb2dbc4dcb.css" />
+    <link rel="stylesheet" href="https://zhaoyuan0218.github.io/css/main.min.61bb32028587f24ca28522d8d197970c7ef33284e5fffb45a75fcbbb2dbc4dcb.css" />
 
     
     <meta name="twitter:card" content="summary"/>
@@ -17,14 +17,14 @@
     <meta property="og:title" content="Your title" />
 <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula turpis sit amet elit pretium." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://example.com/" />
+<meta property="og:url" content="https://zhaoyuan0218.github.io/" />
 
 
 
   </head>
   <body>
     <header class="app-header">
-      <a href="https://example.com"><img class="app-header-avatar" src="/avatar.jpg" alt="John Doe" /></a>
+      <a href="https://zhaoyuan0218.github.io/"><img class="app-header-avatar" src="/avatar.jpg" alt="John Doe" /></a>
       <h1>Your title</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vehicula turpis sit amet elit pretium.</p>
       <div class="app-header-social">
